# TestingProject

./: .gitignore  CMakeLists.txt  Readme.md  results.txt
shared/: generate_test_files.cpp  test_runner.cpp  test_runner.h
variant10/: identifier_analyzer.cpp  identifier_analyzer.h  tester_variant10.cpp
variant11/: polynomial_derivative.cpp  polynomial_derivative.h  tester_variant11.cpp
